scss/_patterns_heading-icon.scss
@import 'settings';

@mixin vf-p-heading-icon {

  .p-heading-icon {
    margin-bottom: $sp-x-large;

    @media (min-width: $breakpoint-medium) {
      margin-bottom: 0;
    }

    &__header {
      display: flex;
      margin-bottom: $sp-medium;

      @media (min-width: $breakpoint-large) {
        margin-bottom: $sp-large;
      }
    }

    &__title {
      margin-bottom: 0;
      margin-top: 0;
    }

    &__img {
      align-self: flex-start;
      flex-shrink: 0;
      height: $sp-xx-large;
      margin-right: $sp-medium;
      width: $sp-xx-large;

      @media (min-width: $breakpoint-medium) {
        height: $sp-xxx-large + $sp-small;
        width: $sp-xxx-large + $sp-small;
      }
    }
  }
}

